--- a/index.html
+++ b/index.html
@@ -111,23 +111,50 @@
 
             <section id="third-section">
                 <div class="container">
-                    <div>
+                    <div class="testimonials-header">
                         <p>TESTIMONIALS</p>
                         <h3>We are commited expert partners</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus eveniet reiciendis ipsa incidunt veritatis exercitationem quis asperiores modi dolore dolor!</p>
                     </div>
     
                     <div class="testimonials-card">
-                        <div class="testimonials-img">img</div>
-                        <div class="testimonials-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.</div>
+                        <div class="testimonials-img">
+                            <img src="img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="testimonials-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <span>NAT REYNOLDS</span>
+                        </div>    
                     </div>
                     <div class="testimonials-card">
-                        <div class="testimonials-img">img</div>
-                        <div class="testimonials-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.</div>
+                        <div class="testimonials-img">
+                            <img src="img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="testimonials-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <span>CELIA ALMEDA</span>
+                        </div> 
                     </div>
                     <div class="testimonials-card">
-                        <div class="testimonials-img">img</div>
-                        <div class="testimonials-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.</div>
+                        <div class="testimonials-img">
+                            <img src="img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="testimonials-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nihil amet eum id pariatur in? Aut maxime vero rem voluptatum.
+                                <i class="fa-solid fa-quote-right"></i>
+                            </p>
+                            <span>BOB ROBERTS</span>
+                        </div> 
                     </div>
                 </div>
             </section>
@@ -136,12 +163,42 @@
                 <div class="container">
                     <h2>Benefits of working whit us</h2>
                     <div class="my-row">
-                        <div class="whit-us-card my-col my-col-50 my-col-33">1</div>
-                        <div class="whit-us-card my-col my-col-50 my-col-33">2</div>
-                        <div class="whit-us-card my-col my-col-50 my-col-33">3</div>
-                        <div class="whit-us-card my-col my-col-50 my-col-33">4</div>
-                        <div class="whit-us-card my-col my-col-50 my-col-33">5</div>
-                        <div class="whit-us-card my-col my-col-50 my-col-33">6</div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>01</h2>
+                            <h3>High Quality</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>02</h2>
+                            <h3>Creative Team</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>03</h2>
+                            <h3>Amazing Results</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>04</h2>
+                            <h3>Best Pricing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>05</h2>
+                            <h3>Innovation</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
+                        <div class="whit-us-card my-col my-col-50 my-col-33">
+                            <h2>06</h2>
+                            <h3>24/7 Support</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fuga eligendi placeat corrupti nesciunt necessitatibus amet adipisci soluta ipsam odit?</p>
+                            <a href="#" class="button more">more</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -149,15 +206,20 @@
             <section id="five-section">
                 <div class="container">
                     <div class="my-row">
-                        <div class="about-us my-col-80">
-                            <h3>About Us</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nostrum aperiam illo, libero fugit deserunt? Facere neque magnam eaque consectetur sit soluta, ut cupiditate in incidunt dolores fuga vitae autem dicta eum, quaerat ex. Blanditiis dolorum, necessitatibus earum, in repellendus voluptas placeat dolores beatae quisquam, id fuga ratione debitis? Minima.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor unde magni architecto, fugiat, laboriosam quisquam temporibus eum quas repellendus iusto accusantium asperiores dolore culpa blanditiis? Aliquid dicta deserunt quia neque?</p>
+                        <div class="about-us my-col-60">
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt magni at atque voluptatibus iusto reprehenderit alias reiciendis cumque consectetur cupiditate. consectetur adipisicing elit. Sed rem doloribus hic iure quam, asperiores pariatur voluptas vitae numquam eius nemo commodi quos sequi voluptatem dolores quod officia est. Placeat reprehenderit odit porro ad amet fuga laudantium delectus libero, alias, commodi, cumque temporibus ipsum. Dolores eaque eos hic nesciunt quidem.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim animi autem sapiente voluptatibus accusamus placeat, ex possimus at laborum,Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam aspernatur amet nisi molestias suscipit quaerat magnam ea porro hic sequi. cumque dolore? Tempora vero commodi voluptate vitae, sint saepe libero necessitatibus, voluptates asperiores accusamus, accusantium velit.</p>
                         </div>
-                        <div class="my-col-20">
-                            img
-                            <p>I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <a href="#">Find me in linkedin</a>
+                        <div class="my-col-40">
+                            <div class="about-img-container">
+                                <i class="fa-solid fa-quote-left 2xl"></i>
+                                <img src="img/about.jpg" alt="About">
+                            </div>
+                            <h3>I help companies Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                            <a class="button more linkedin" href="#">
+                                <i class="fa-brands fa-linkedin"></i>
+                                Find me on linkedin</a>
                         </div>
 
                     </div>
@@ -169,11 +231,16 @@
                     <p>GET STARTED</p>
                     <h3>Simple, Transparent Pricing</h3>
                     <h2>It's Free!</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore delectus cum accusantium earum natus? Autem praesentium expedita odit eveniet impedit ad molestiae cum voluptatibus obcaecati.</p>
-                    <a href="#">Get Started</a>
-                    <p>Copyright 2021 Boolean Classe XX <a href="">Privacy policy</a></p>
+                    <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans whit more controls.</p>
+                    <a class="button" href="#">Get Started</a>
+                    <p>Copyright 2021 Boolean 
+                        <i class="fa-solid fa-circle fa-2xs"></i>
+                         Classe XX
+                         <i class="fa-solid fa-circle fa-2xs"></i>
+                          <a href="">Privacy policy</a></p>
                 </div>
             </section>
+
         </main>
         <!-- Fine Main -->
         
