--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </section>
 
             <section id="six-section">
-                <div class="container">
+                <div class="container small-container">
                     <p>GET STARTED</p>
                     <h3>Simple, Transparent Pricing</h3>
                     <h2>It's Free!</h2>
@@ -246,9 +246,13 @@
         
         <!-- Inizio Footer Principale -->
         <footer>
-            <div class="container">
+            <div class="container small-container">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, temporibus eveniet expedita veniam veritatis ullam!</p>
-                <p><a href="#">Lorem ipsum</a>Lorem, ipsum dolor. <a href="#">Boolean careers</a></p>
+                <p>
+                    <a href="#">Lorem ipsum</a>
+                     Lorem, ipsum dolor. 
+                     <a href="#">Boolean careers</a>
+                </p>
             </div>
         </footer>
         <!-- Fine Footer Principale -->
