--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
             <div class="container">
                 <div id="header-container">
                     <div class="logo-container">
-                        <img src="img/logo.png" alt="Logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="Logo">
+                        </a>
                     </div>
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">Planning</a>
+                                <a href="#second-section">Planning</a>
                             </li>
                             <li>
-                                <a href="#">Testimonials</a>
+                                <a href="#third-section">Testimonials</a>
                             </li>
                             <li>
-                                <a href="#">Features</a>
+                                <a href="#four-section">Features</a>
                             </li>
                             <li>
-                                <a href="#">About Us</a>
+                                <a href="#five-section">About Us</a>
                             </li>
                             <li>
                                 <a class="button" href="#">Get Started</a>
